Changes with version 1.96.0.dev2

 *) Adjusted versioning scheme to PEP 440


Changes with version 1.96.0-dev-r1

 *) First alpha release