@@ -7,7 +7,7 @@ PYTHON_COMPAT=( python2_7 )
 inherit distutils-r1
 
 MY_P="${P/_alpha/.dev}"
-DESCRIPTION="pyliblinear - liblinear python API"
+DESCRIPTION="pyliblinear - a liblinear python API"
 HOMEPAGE="http://opensource.perlig.de/pyliblinear/"
 SRC_URI="http://storage.perlig.de/pyliblinear/dev/${MY_P}.tar.gz"
 RESTRICT="mirror"
