@@ -1,5 +1,5 @@
 - working cross validation
-- Py3
+- mmap support
 
 
 .. vim:tw=72 syntax=rest
