@@ -15,14 +15,16 @@
     limitations under the License.
 
 
-====================================
- Pyliblinear - liblinear python API
-====================================
+======================================
+ Pyliblinear - a liblinear python API
+======================================
 
 |**pyliblinear**| is an API for `liblinear
 <http://www.csie.ntu.edu.tw/~cjlin/liblinear/>`_ without using ctypes.
 It aims for more pythonic access to liblinear's features, especially
-featuring lazy evaluations whereever possible.
+featuring streams of data and lazy evaluations whereever possible.
+
+Supported python versions are Python 2.7 and Python 3.2 and above.
 
 
 Documentation
