@@ -5,7 +5,7 @@
 
 [tox]
 skipsdist=True
-envlist = py27, py31, py32, py33, py34
+envlist = py27, py32, py33, py34
 
 [testenv]
 commands = {envpython} make.py test
